# article-simple-bazel

./: .gitignore  README.md  WORKSPACE.bazel  requirements.txt
apps/nice_messages/: BUILD.bazel  main.py
apps/nice_messages/tests/: test.py
apps/run_calculations/: BUILD.bazel  main.py
apps/run_calculations/tests/: test.py
libs/complex_calculations/: BUILD.bazel  __init__.py  main.py
libs/complex_calculations/tests/: test.py
libs/logging_utils/: BUILD.bazel  __init__.py  main.py
routines/calculate_daily_metrics/: BUILD.bazel  main.py
routines/calculate_daily_metrics/tests/: test.py
