load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "complex_calculations",
    srcs = glob([
        "*.py",
    ]),
    visibility = ["//visibility:public"],
)

py_test(
    name = "test",
    srcs = glob([
        "tests/**/*.py",
    ]),
    main = "tests/test.py",
    deps = [
        ":complex_calculations",
    ],
)
